token校验改造 删除MAC配置

--- a/spring-cloud-framework/gateway/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/spring-cloud-framework/gateway/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -34,6 +34,16 @@
       "name": "framework.database.password",
       "type": "java.lang.String",
       "description": "密码."
+    },
+    {
+      "name": "zuul.ratelimit.sensitive-headers",
+      "type": "java.lang.String",
+      "description": "Description for zuul.ratelimit.sensitive-headers."
+    },
+    {
+      "name": "hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds",
+      "type": "java.lang.String",
+      "description": "Description for hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds."
     }
   ]
 }
